--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,10 @@
         <div class="hero card banner-illustrated">
           <div class="glow" aria-hidden="true"></div>
           <div class="hero-content">
+            <div class="brand-inline" aria-label="GadGets4all brand">
+              <div class="logo">G4A</div>
+              <div class="name">GadGets4all</div>
+            </div>
             <div class="title-lines">
               <span class="t1">Trending</span>
               <span class="t2">Tech &amp; Gifts</span>
